--- a/main1.css
+++ b/main1.css
@@ -107,7 +107,7 @@ body {
 }
 
 #services .col-4 {
-    width: calc(33.33% - 20px);
+    width: calc(33.33% - 40px); /* Même taille pour toutes les dalles avec un espacement */
     margin: 20px;
 }
 
@@ -117,6 +117,11 @@ body {
     text-align: center;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease; /* Transition pour le changement de couleur au survol */
+}
+
+#services .box:hover {
+    background-color: #1f1f1f; /* Gris plus sombre au survol */
 }
 
 #services .box i {
