--- a/main1.css
+++ b/main1.css
@@ -105,6 +105,7 @@ body {
 /* Bouton "Nous Contacter" */
 .actions {
     text-align: center;
+    margin-top: 30px; /* Ajout d'une marge supérieure pour éloigner le bouton des boîtes de services */
 }
 
 .actions .button {
