--- a/main1.css
+++ b/main1.css
@@ -105,7 +105,6 @@ body {
 /* Bouton "Nous Contacter" */
 .actions {
     text-align: center;
-    margin-top: 30px; /* Ajout d'une marge supérieure pour éloigner le bouton des boîtes de services */
 }
 
 .actions .button {
@@ -147,4 +146,21 @@ body {
     text-decoration: underline;
 }
 
-/* ... Vos autres styles CSS personnalisés ... */
+/* Médias queries pour les appareils mobiles */
+@media screen and (max-width: 768px) {
+    #header .inner {
+        align-items: center; /* Centrer le contenu sur les petits écrans */
+    }
+
+    #nav {
+        display: none; /* Masquer le menu sur les grands écrans */
+    }
+
+    #nav.show {
+        display: block; /* Afficher le menu sur les petits écrans */
+    }
+
+    #nav a {
+        margin: 5px 0; /* Réduire l'espace entre les liens de navigation */
+    }
+}
