--- a/main1.css
+++ b/main1.css
@@ -1,5 +1,3 @@
-/* main1.css */
-
 /* Réinitialisation de la marge et du remplissage pour tous les éléments */
 body, h1, p, ul, li, a {
     margin: 0;
@@ -186,8 +184,10 @@ body {
     /* Supprimer le marqueur de liste pour la classe "no-marker" */
     .no-marker, #nav .no-marker {
         list-style: none;
-        ::marker {
-            content: none;
-        }
+    }
+    
+    /* Supprimer le marqueur de liste pour la classe "no-marker" dans le menu déroulant */
+    #nav .no-marker::marker {
+        content: none;
     }
 }
