--- a/main1.css
+++ b/main1.css
@@ -23,6 +23,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     align-items: center; /* Centrer horizontalement tout le contenu dans l'en-tête */
     justify-content: center; /* Centrer verticalement tout le contenu dans l'en-tête */
 }
@@ -32,20 +33,14 @@ body {
     font-weight: bold;
     color: #ff0000; /* Rouge */
     text-decoration: none;
-    margin-bottom: 10px;
+    margin-bottom: 20px; /* Espacement entre le logo et les onglets */
 }
 
-
-
-#header .logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: #ff0000; /* Rouge */
-    text-decoration: none;
-    flex: 1; /* Utiliser autant d'espace que possible dans le conteneur flex */
-    display: flex; /* Activer le modèle flex pour centrer le logo */
-    justify-content: center; /* Centrer horizontalement le contenu dans le conteneur flex */
-    align-items: center; /* Centrer verticalement le contenu dans le conteneur flex */
+#nav {
+    display: flex;
+    flex-direction: column; /* Afficher les onglets en colonne */
+    align-items: center; /* Centrer horizontalement les onglets */
+    margin-top: 20px; /* Espacement entre le logo et les onglets */
 }
 
 #nav a {
