--- a/main1.css
+++ b/main1.css
@@ -23,8 +23,9 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     align-items: center; /* Centrer horizontalement tout le contenu dans l'en-tête */
-    justify-content: space-between; /* Espacement égal entre les éléments (logo et menu) */
+    justify-content: center; /* Centrer verticalement tout le contenu dans l'en-tête */
 }
 
 #header .logo {
@@ -32,12 +33,14 @@ body {
     font-weight: bold;
     color: #ff0000; /* Rouge */
     text-decoration: none;
-    margin-bottom: 10px;
+    margin-bottom: 20px; /* Espacement entre le logo et les onglets */
 }
 
 #nav {
     display: flex;
+    flex-direction: column; /* Afficher les onglets en colonne */
     align-items: center; /* Centrer horizontalement les onglets */
+    margin-top: 20px; /* Espacement entre le logo et les onglets */
 }
 
 #nav a {
@@ -192,10 +195,7 @@ body {
 
     /* Styles pour le menu déroulant */
     #menu-toggle {
-        display: block;
-        color: #fff;
-        font-size: 24px;
-        cursor: pointer;
+        display: none;
     }
 
     #menu-links {
@@ -219,12 +219,12 @@ body {
         margin: 5px 0;
     }
 
-    #menu-toggle.open + #menu-links {
-        display: block;
-    }
-
     #menu-toggle.open {
         transform: rotate(90deg);
+    }
+
+    #menu-links.show {
+        display: block;
     }
 }
 
@@ -232,14 +232,5 @@ body {
 @media screen and (min-width: 768px) {
   .navPanelToggle {
     display: none;
-  }
-
-  #menu-toggle {
-    display: none;
-  }
-
-  #nav {
-    display: flex;
-    align-items: center;
   }
 }
