--- a/main1.css
+++ b/main1.css
@@ -53,6 +53,10 @@ body {
     align-items: center;
     background-color: #1a1a1a;
     padding: 10px;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    z-index: 1;
 }
 
 #nav a {
@@ -133,5 +137,39 @@ body {
 
     #nav a:hover {
         text-decoration: underline;
+    }
+
+    /* Styles pour le menu déroulant */
+    #menu-toggle {
+        display: none;
+    }
+
+    #menu-links {
+        display: none;
+        background-color: #1a1a1a; /* Noir ou gris foncé */
+        padding: 10px;
+        position: absolute;
+        top: 60px;
+        right: 20px;
+        z-index: 1;
+    }
+
+    #menu-links li {
+        list-style-type: none;
+    }
+
+    #menu-links li a {
+        display: block;
+        color: #fff;
+        text-decoration: none;
+        margin: 5px 0;
+    }
+
+    #menu-toggle.open {
+        transform: rotate(90deg);
+    }
+
+    #menu-links.show {
+        display: block;
     }
 }
