--- a/main1.css
+++ b/main1.css
@@ -97,23 +97,9 @@ body {
     border-radius: 4px; /* Ajouter des coins arrondis */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Ajouter une ombre */
     margin-bottom: 30px; /* Ajouter de l'espace entre les dalles */
-}
 
-.box i {
-    font-size: 48px;
-    color: #ff0000; /* Rouge */
-    margin-bottom: 10px;
-}
-
-.box h3 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.box p {
-    font-size: 16px;
-    line-height: 1.6;
+    /* Ajouter des bordures encadrant les dalles */
+    border: 1px solid #ff0000; /* Rouge */
 }
 
 /* Bouton "Nous Contacter" */
