--- a/main.css
+++ b/main.css
@@ -50,11 +50,14 @@ body {
 }
 
 #nav.show {
-    display: flex; /* Afficher le menu sur les petits écrans lorsque le bouton est cliqué */
-    flex-direction: column;
-    align-items: center;
-    background-color: #1a1a1a;
+    display: flex;
+    flex-direction: column; /* Afficher le menu déroulant en colonne */
+    background-color: #1a1a1a; /* Noir ou gris foncé */
     padding: 10px;
+    position: absolute;
+    top: 60px; /* Ajuster la position verticale du menu déroulant */
+    right: 20px; /* Ajuster la position horizontale du menu déroulant */
+    z-index: 1; /* Assurer que le menu déroulant s'affiche au-dessus du contenu */
 }
 
 #nav a {
